Fix boot directories, and make USB vendor match ACER A500 vendor on system boot

--- a/etc/init.rc
+++ b/etc/init.rc
@@ -17,7 +17,12 @@ on init
     mkdir /system
     mkdir /data
     mkdir /cache
+    mkdir /mnt
+    mkdir /flexrom
+    mkdir /mnt/external_sd
     mount /tmp /tmp tmpfs
+
+    symlink /flexrom /vendor
 
 on boot
 
@@ -39,8 +44,8 @@ service adbd /sbin/adbd recovery
 # In recovery, always run adbd as root.
 on property:ro.debuggable=1
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idVendor 18D1
-    write /sys/class/android_usb/android0/idProduct D001
+    write /sys/class/android_usb/android0/idVendor 0502
+    write /sys/class/android_usb/android0/idProduct 3325
     write /sys/class/android_usb/android0/functions adb
     #write /sys/class/android_usb/android0/enable 1
     write /sys/class/android_usb/android0/iManufacturer $ro.product.manufacturer
